# WeatherAndEnergyProduction

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
.github/workflows/: ci.yaml
examples/: CMakeLists.txt  Makefile  client_node.c  main.c  main_client.c  server_node.c
examples/env_loader/: env_loader.c  env_loader.h
examples/geo_loc_sections/: main.c  sections.c
examples/include/: opc_ua_server.h  weather_condition.h  weather_thread.h
examples/opc_ua/opc_ua_client/: opc_ua_client.c  opc_ua_client.h
examples/opc_ua/opc_ua_server/: opc_ua_server.c  opc_ua_server.h
examples/pubServSub/: pub.c  serv.c  sub.c
examples/resources/: sections.csv
examples/src/: env_loader.c  main_client.c  opc_ua_server.c  weather_thread.c
examples/weather_condition/: compile_command.txt  get_temp.c  main  main.c  weather_condition.c  weather_condition.h
examples/weather_thread/: weather_thread.c  weather_thread.h
include/: opc_ua_client.h  opc_ua_server.h  sections.h  weather_condition.h
src/: env_loader.c  log.c  main.c  main_client.c  opc_ua_client.c  opc_ua_server.c  sections.c  weather_condition.c  weather_thread.c
tests/: CMakeLists.txt  test_env_loader.cpp  test_main.cpp  test_sections.cpp  test_weather_condition.cpp
